# src/routes/auth.routes.js
@@ -1,9 +1,12 @@
 import { Router } from "express";
-import { register, login } from "../controllers/auth.controller.js";
+import { register, login, logout } from "../controllers/auth.controller.js";
+import { requireAuth } from "../middleware/auth.js";
+
 
 const router = Router();
 
 router.post("/register", register);
 router.post("/login", login);
+router.post("/logout", requireAuth, logout);
 
 export default router;
