# src/swagger.yaml
@@ -78,6 +78,16 @@ paths:
         "200":
           description: JWT token returned
 
+  /api/auth/logout:
+  post:
+    summary: Logout user
+    security:
+      - bearerAuth: []
+    responses:
+      "200":
+        description: Logged out successfully
+
+
   # ---------------- CATEGORIES ----------------
   /api/categories:
     get:
